Making server start seperately from main and other misc stuff